# MTAnalyzer

./: .gitignore  CMakeLists.txt  FinalProject.pro  MTAnalyzer.pro  README.md  REPORT.md  baseplotwidget.cpp  baseplotwidget.h  dataimportingthread.cpp  dataimportingthread.h  flowplotwidget.cpp  flowplotwidget.h  flowplotwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  pathsearchwidget.cpp  pathsearchwidget.h  pathsearchwidget.ui  plotwidget.cpp  plotwidget.h  plotwidget.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  previewwidget.cpp  previewwidget.h  previewwidget.ui  querywidget.cpp  querywidget.h  querywidget.ui  stationflowplotwidget.cpp  stationflowplotwidget.h  stationflowplotwidget.ui  totalflowplotwidget.cpp  totalflowplotwidget.h  totalflowplotwidget.ui  withlineflowplotwidget.cpp  withlineflowplotwidget.h  (+1 more)
.github/workflows/: ios.yml  macos.yml  ubuntu.yml  windows.yml
utilities/: BDateTime.cpp  BDateTime.h  base.hpp  bdatabasemanager.cpp  bdatabasemanager.h  hint.hpp
